--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -11,11 +11,12 @@
     "noUncheckedSideEffectImports": true,
 
     /*src文件夹别名*/
+    "baseUrl": "./",
     "paths": { //路径映射，相对于baseUrl
       "@/*": [
         "src/*"
-      ],
-    },
+      ]
+    }
   },
   "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"]
 }
